# explang-lcinsp

./: README.md  exp-example.ipynb  pyproject.toml
explang/core/: __init__.py  base.py  baseshift.py
explang/csvtask/: __init__.py  csvtask.py
tests/: csvtest_test.py
